src/test/ui/autoderef-full-lval.stderr
error[E0369]: binary operation `+` cannot be applied to type `std::boxed::Box<isize>`
  --> $DIR/autoderef-full-lval.rs:25:20
   |
LL |     let z: isize = a.x + b.y;
   |                    ^^^^^^^^^
   |
   = note: an implementation of `std::ops::Add` might be missing for `std::boxed::Box<isize>`

error[E0369]: binary operation `+` cannot be applied to type `std::boxed::Box<isize>`
  --> $DIR/autoderef-full-lval.rs:31:25
   |
LL |     let answer: isize = forty.a + two.a;
   |                         ^^^^^^^^^^^^^^^
   |
   = note: an implementation of `std::ops::Add` might be missing for `std::boxed::Box<isize>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
